--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 :root {
+	--vh: 0px;
+
 	/*** Colors ***/
 	--green: #388e3c;
 	--green-lighten: #4caf50;
